test/errors/error37.vult
enum x {
  A
}

enum x {
  B
}
